[project]
name = "omsaravanabhava-release-governance"
version = "237.0.0"
requires-python = ">=3.12"
description = "Deterministic release, repository integrity and effective route-consumer tooling."

[tool.unittest]
start-directory = "tests"
pattern = "test_*.py"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "basic"
