[project]
name = "omsaravanabhava-release-governance"
version = "238.0.0"
requires-python = ">=3.12"
description = "Transactional release, deployment conformance and repository integrity tooling."

[tool.unittest]
start-directory = "tests"
pattern = "test_*.py"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "basic"
