[project]
name = "omsaravanabhava-release-governance"
version = "239.0.0"
requires-python = ">=3.12"
description = "Atomic publishing, deployment conformance and repository integrity tooling."

[tool.unittest]
start-directory = "tests"
pattern = "test_*.py"

[tool.ruff]
line-length = 100
target-version = "py312"
